REFACTOR THIS BITCH!

--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -19,7 +19,7 @@ html(lang:"en")
             #messageContainer
               #messages
                 .message.template 
-                  .{{cdid}}
+                  .user
                   .body
 
             form#sendMessage
