--- a/app/views/app.jade
+++ b/app/views/app.jade
@@ -2,9 +2,9 @@
 html(lang:"en")
   head
     meta(http-equiv="Content-Type", content="text/html;charset=UTF-8")
-    meta(name: "apple-mobile-web-app-capable", content: "yes")
-    meta(name: "apple-mobile-web-app-status-bar-style", content: "black-translucent")
-    meta(name: "viewport", content: "width = 1024, initial-scale = 1, user-scalable = no")
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
+    meta(name="viewport", content="width=1024, initial-scale=1, user-scalable=no")
     != SocketStream
     title SocketChat
   body
@@ -20,10 +20,9 @@ html(lang:"en")
             form#sendMessage
               input(id='newMessage', type='text', name='message', autocomplete='off')
               input(id='sendButton', type='submit', value='Send')
-              
+
             #footer
 
       form(onsubmit: 'return false')#signIn.views.hidden
         h1 Please enter a username to begin:
         input(type='text')
-
